<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:visibility="visible">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagen_registro_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@drawable/imagen_registro">

    </androidx.appcompat.widget.AppCompatImageView>

    <ImageView
        android:id="@+id/imagen_camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_camera_alt_24"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/imagen_registro_main"
        app:layout_constraintEnd_toEndOf="@+id/imagen_registro_main"
        app:layout_constraintStart_toStartOf="@+id/imagen_registro_main"
        app:layout_constraintTop_toTopOf="@+id/imagen_registro_main"
        app:layout_constraintVertical_bias="1.0">

    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name_text"
        style="@style/input_witget"
        android:layout_marginTop="50dp"
        android:hint="@string/registro_name"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_registro_main"
        app:startIconDrawable="@drawable/baseline_face_24"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_last_name"
        style="@style/input_witget"
        android:hint="@string/registro_last_name"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_name_text"
        app:startIconDrawable="@drawable/baseline_face_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <Button

        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/registro_secundary"
        android:minWidth="200dp"
        android:text="@string/bnt_register"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/politica_privacidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_last_name"
        app:layout_constraintVertical_bias="0.881">

    </Button>

    <TextView
        android:id="@+id/politica_privacidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/politica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/condiciones_privacidad"
        app:layout_constraintStart_toStartOf="parent"

        >

    </TextView>

    <TextView
        android:id="@+id/condiciones_privacidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:contextClickable="true"
        android:text="@string/condiciones"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/politica_privacidad"

        >

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exposedDropdownLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/edad"
        android:background="@color/spinner"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_last_name"
        app:layout_constraintVertical_bias="0.0">

        <AutoCompleteTextView
            android:id="@+id/exposedDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none">

        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>